Fix NATS connectivity test command
- Changed 'nats-sub' to 'nats sub' (newer nats-box syntax)
- Updated expected output message to match current version
- Fixes CalledProcessError with exit status 127

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bf281873",
+   "id": "8ee9d445",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f58ddc",
+   "id": "f3df6058",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e67adec",
+   "id": "1ffe531f",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c58e1786",
+   "id": "b56eb071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e0e93a3",
+   "id": "bc0d2dbe",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723d1c5d",
+   "id": "05b100fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f80a755c",
+   "id": "b4a14b6f",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,22 +225,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f3a7140",
+   "id": "0a85c1a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Quick connectivity test\n",
     "kubectl run -it --rm nats-test --image=natsio/nats-box:latest --restart=Never -- \\\n",
-    "  nats-sub -s nats://nats.nats-system:4222 test\n",
+    "  nats sub -s nats://nats.nats-system:4222 test\n",
     "\n",
-    "# If successful, you'll see \"Subscribing on test\"\n",
+    "# If successful, you'll see \"Listening on [test]\"\n",
     "# Press Ctrl+C to exit"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "00e7838a",
+   "id": "f156d55f",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d09cc0c",
+   "id": "aa21d6ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6a75413",
+   "id": "ee671323",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e0cfe05",
+   "id": "35e14161",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1119f22c",
+   "id": "332d1875",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e0d9cfc",
+   "id": "a304a014",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73927de8",
+   "id": "7b47ff8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21cf1771",
+   "id": "d2e98f4b",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae5960b4",
+   "id": "b61d76fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bae4f03",
+   "id": "dd0abe11",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "205e995b",
+   "id": "a28fef84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d969c91e",
+   "id": "57baf92f",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d28a565",
+   "id": "f63d9b7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e03494c",
+   "id": "7e5dec65",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba373e2a",
+   "id": "d7c4033d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "504edc12",
+   "id": "5bb8a701",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c698f5a3",
+   "id": "512f2efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29974620",
+   "id": "56030011",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d500f8fb",
+   "id": "7472c7ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96fdc759",
+   "id": "67f8a5b6",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fa20575",
+   "id": "7f0e9989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25c2ffd6",
+   "id": "66384734",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3e2ba8",
+   "id": "b3cd5382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "178f1d63",
+   "id": "7420f333",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedd0d16",
+   "id": "9ce69d5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bf4cb54",
+   "id": "f6a05b4d",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca461dd6",
+   "id": "6335d089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f645a7e8",
+   "id": "8fa4dbae",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c81b04c",
+   "id": "0226a789",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8ebbe24",
+   "id": "5dea2ffe",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17eb46c8",
+   "id": "112a6133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb3696c",
+   "id": "0fe3583b",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a4f6df4",
+   "id": "fc2e4099",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff52626d",
+   "id": "d0aaf0b5",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb9ee58",
+   "id": "b4106220",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "562b8369",
+   "id": "6fdd0ba2",
    "metadata": {},
    "source": [
     "---\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c6f4df4",
+   "id": "74f385d5",
    "metadata": {},
    "source": [
     "### Community Resources\n",
