Change NATS connectivity test to non-interactive command
- Changed from 'nats sub' (interactive, hangs notebook) to 'nats pub' (exits cleanly)
- Removed '-it' flag (no longer needed for non-interactive command)
- Publishes a test message instead of subscribing
- Prevents notebook from hanging when trying to exit with Ctrl+C

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8ee9d445",
+   "id": "c6a4cc01",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3df6058",
+   "id": "4237d8a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ffe531f",
+   "id": "382fa8fa",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b56eb071",
+   "id": "2ea79043",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc0d2dbe",
+   "id": "2e2c87be",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05b100fd",
+   "id": "7b2da6c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4a14b6f",
+   "id": "cbe05860",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,22 +225,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a85c1a0",
+   "id": "137df7b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Quick connectivity test\n",
-    "kubectl run -it --rm nats-test --image=natsio/nats-box:latest --restart=Never -- \\\n",
-    "  nats sub -s nats://nats.nats-system:4222 test\n",
+    "# Quick connectivity test (publishes a test message)\n",
+    "kubectl run --rm nats-test --image=natsio/nats-box:latest --restart=Never -- \\\n",
+    "  nats pub -s nats://nats.nats-system:4222 test \"Hello from NATS test\"\n",
     "\n",
-    "# If successful, you'll see \"Listening on [test]\"\n",
-    "# Press Ctrl+C to exit"
+    "# If successful, you'll see \"Published [test] : 'Hello from NATS test'\"\n",
+    "echo \"✓ NATS is reachable and accepting connections\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f156d55f",
+   "id": "c7680c1c",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa21d6ad",
+   "id": "6554d065",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee671323",
+   "id": "cacf81d6",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e14161",
+   "id": "9966d1a1",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "332d1875",
+   "id": "57ece12b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a304a014",
+   "id": "177371ab",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b47ff8d",
+   "id": "b458de73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2e98f4b",
+   "id": "0a28f225",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b61d76fc",
+   "id": "337e6e17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0abe11",
+   "id": "bdd3a5b5",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a28fef84",
+   "id": "572f7487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57baf92f",
+   "id": "952b7921",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63d9b7d",
+   "id": "4fa7a319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e5dec65",
+   "id": "9a9c355a",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7c4033d",
+   "id": "0201ceb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bb8a701",
+   "id": "e15c7829",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "512f2efb",
+   "id": "e2347626",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56030011",
+   "id": "0c5ec782",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7472c7ba",
+   "id": "d58166af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f8a5b6",
+   "id": "d68b0b45",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f0e9989",
+   "id": "c79e4f38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66384734",
+   "id": "c372a097",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3cd5382",
+   "id": "ef354311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7420f333",
+   "id": "41688689",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ce69d5c",
+   "id": "289b8cf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6a05b4d",
+   "id": "605e0f25",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6335d089",
+   "id": "703097f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fa4dbae",
+   "id": "606b2f8b",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0226a789",
+   "id": "80d2b9f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dea2ffe",
+   "id": "1032a725",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112a6133",
+   "id": "ca925a1a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fe3583b",
+   "id": "f026a331",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc2e4099",
+   "id": "6ce21e41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0aaf0b5",
+   "id": "f1322fa6",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4106220",
+   "id": "51059576",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fdd0ba2",
+   "id": "f9f8ea65",
    "metadata": {},
    "source": [
     "---\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f385d5",
+   "id": "3a11505d",
    "metadata": {},
    "source": [
     "### Community Resources\n",
