Fix NODE_IP variable expansion in NodePort service creation
- Changed '${NODE_IP}' to '$NODE_IP' (removed backslash escape)
- Now correctly displays: 'Access at: http://172.x.x.x:30200'
- Previously displayed literal '${NODE_IP}' text instead of IP address

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c6a4cc01",
+   "id": "3542023e",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4237d8a9",
+   "id": "f56e36ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "382fa8fa",
+   "id": "66649964",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ea79043",
+   "id": "aac6dbec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e2c87be",
+   "id": "b4b6da3e",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2da6c5",
+   "id": "9a6412f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbe05860",
+   "id": "c450256e",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137df7b3",
+   "id": "ce253150",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7680c1c",
+   "id": "875de4ae",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6554d065",
+   "id": "37579f23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cacf81d6",
+   "id": "25dafe02",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9966d1a1",
+   "id": "af53deb7",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57ece12b",
+   "id": "dd2a8807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "177371ab",
+   "id": "a7dedb90",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b458de73",
+   "id": "eb840669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a28f225",
+   "id": "e8eebfc8",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "337e6e17",
+   "id": "71b34f8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdd3a5b5",
+   "id": "38a5e378",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "572f7487",
+   "id": "fb492ec1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952b7921",
+   "id": "c44b5490",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fa7a319",
+   "id": "7883c4f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,12 +542,12 @@
     "\n",
     "echo \"\"\n",
     "echo \"✓ NodePort service created on port 30200\"\n",
-    "echo \"  Access at: http://\\${NODE_IP}:30200\""
+    "echo \"  Access at: http://$NODE_IP:30200\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9a9c355a",
+   "id": "af9ab1da",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0201ceb3",
+   "id": "85bd527f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e15c7829",
+   "id": "a02f5b39",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2347626",
+   "id": "b330a5c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c5ec782",
+   "id": "009ad3ab",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58166af",
+   "id": "2d182af7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d68b0b45",
+   "id": "e90ddee8",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c79e4f38",
+   "id": "bc7f4ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c372a097",
+   "id": "a1049b86",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef354311",
+   "id": "d8bc0d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41688689",
+   "id": "884338f5",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "289b8cf9",
+   "id": "afe9e5fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605e0f25",
+   "id": "84b04452",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -862,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "703097f5",
+   "id": "d071347a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "606b2f8b",
+   "id": "a68ccb1a",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80d2b9f4",
+   "id": "60e4125a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1032a725",
+   "id": "3d428395",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -927,7 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca925a1a",
+   "id": "f93d10dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f026a331",
+   "id": "b7df52ab",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce21e41",
+   "id": "fb0d0cf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1322fa6",
+   "id": "74f3ad40",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1013,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51059576",
+   "id": "defcfc4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9f8ea65",
+   "id": "fe61ee4e",
    "metadata": {},
    "source": [
     "---\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a11505d",
+   "id": "f98be073",
    "metadata": {},
    "source": [
     "### Community Resources\n",
