--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3542023e",
+   "id": "cfed4828",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f56e36ad",
+   "id": "7e389fcb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66649964",
+   "id": "119b45fe",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aac6dbec",
+   "id": "e6d79154",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4b6da3e",
+   "id": "bfa873aa",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6412f5",
+   "id": "776fa1e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c450256e",
+   "id": "e2c5171b",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce253150",
+   "id": "239a991b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "875de4ae",
+   "id": "09626093",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37579f23",
+   "id": "be7be116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25dafe02",
+   "id": "4015dc53",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af53deb7",
+   "id": "0732a945",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd2a8807",
+   "id": "9c7f3619",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7dedb90",
+   "id": "caa64f53",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb840669",
+   "id": "b0b8ec13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,14 +349,18 @@
     "if kubectl get dynamographdeployment vllm-disagg-router -n $NAMESPACE &>/dev/null; then\n",
     "    echo \"\"\n",
     "    echo \"⚠️  Lab 1 deployment (vllm-disagg-router) is still running!\"\n",
-    "    echo \"   This deployment is using GPUs needed for Lab 3.\"\n",
+    "    echo \"   Deleting it to free GPUs for Lab 3...\"\n",
     "    echo \"\"\n",
-    "    echo \"Delete Lab 1 deployment? (you can redeploy it later)\"\n",
+    "    \n",
+    "    # Delete the deployment\n",
+    "    kubectl delete dynamographdeployment vllm-disagg-router -n $NAMESPACE\n",
+    "    kubectl delete svc vllm-frontend-nodeport -n $NAMESPACE 2>/dev/null || true\n",
+    "    \n",
     "    echo \"\"\n",
-    "    echo \"Run: kubectl delete dynamographdeployment vllm-disagg-router -n $NAMESPACE\"\n",
-    "    echo \"     kubectl delete svc vllm-frontend-nodeport -n $NAMESPACE\"\n",
-    "    echo \"\"\n",
-    "    echo \"Or press Ctrl+C to keep Lab 1 running (Lab 3 will fail if insufficient GPUs)\"\n",
+    "    echo \"✓ Lab 1 deployment deleted - waiting for pods to terminate...\"\n",
+    "    kubectl wait --for=delete pod -l nvidia.com/dynamo-graph-deployment-name=vllm-disagg-router -n $NAMESPACE --timeout=60s 2>/dev/null || true\n",
+    "    \n",
+    "    echo \"✓ GPUs freed for Lab 3\"\n",
     "else\n",
     "    echo \"✓ Lab 1 deployment not found - GPUs should be available\"\n",
     "fi"
@@ -364,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8eebfc8",
+   "id": "50d1392c",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -375,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71b34f8f",
+   "id": "0899e008",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38a5e378",
+   "id": "57c26e1c",
    "metadata": {},
    "source": [
     "---\n",
@@ -405,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb492ec1",
+   "id": "26f1767b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44b5490",
+   "id": "9ec49992",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -512,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7883c4f3",
+   "id": "8c272855",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9ab1da",
+   "id": "848fff8b",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -556,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bd527f",
+   "id": "06693ea3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a02f5b39",
+   "id": "345297c7",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -595,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b330a5c6",
+   "id": "bb0f4410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +624,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "009ad3ab",
+   "id": "1910e24c",
    "metadata": {},
    "source": [
     "---\n",
@@ -635,7 +639,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d182af7",
+   "id": "49d0f2a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e90ddee8",
+   "id": "bb87a9d6",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -703,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc7f4ca6",
+   "id": "f8dd69fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +727,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1049b86",
+   "id": "c1a57da5",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -737,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8bc0d0a",
+   "id": "e7b1fc49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "884338f5",
+   "id": "56a929ab",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -793,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afe9e5fb",
+   "id": "d766981c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b04452",
+   "id": "e5896af2",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -862,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d071347a",
+   "id": "a386c2a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a68ccb1a",
+   "id": "51b0e70f",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -894,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60e4125a",
+   "id": "10e7f082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d428395",
+   "id": "0d0f1ad5",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -927,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93d10dd",
+   "id": "86d1bf65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7df52ab",
+   "id": "41ad3dbe",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -985,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0d0cf4",
+   "id": "ec51b716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74f3ad40",
+   "id": "a0fa5170",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1013,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "defcfc4f",
+   "id": "d41b1101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1038,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe61ee4e",
+   "id": "a23bf7e1",
    "metadata": {},
    "source": [
     "---\n",
@@ -1055,7 +1059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f98be073",
+   "id": "38c0d232",
    "metadata": {},
    "source": [
     "### Community Resources\n",
