Fix NATS JetStream configuration to prevent pod crashes
Root Cause:
- Pods were crashing with 'JetStream not available' error
- Previous config used --set flags that didn't properly enable JetStream
- Workers need JetStream for publishing KV cache events

Solution:
- Use proper Helm values file with nested jetstream config
- Enable fileStore with PVC (10Gi persistent storage)
- Set max_file_store and store_dir in config.merge section
- This matches the working configuration from manual fix

Changes:
- Created /tmp/nats-values.yaml with proper JetStream structure
- Updated helm install to use --values instead of multiple --set flags
- Updated success message to reflect 10Gi file storage

Result:
- NATS pods start with JetStream fully enabled
- Dynamo workers can successfully connect and publish events
- No more 'JetStream unavailable' crashes

--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cfed4828",
+   "id": "6081f5c3",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e389fcb",
+   "id": "a8057277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "119b45fe",
+   "id": "3bc60abf",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6d79154",
+   "id": "183d3cf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,25 +168,40 @@
     "# Create namespace for NATS\n",
     "kubectl create namespace nats-system --dry-run=client -o yaml | kubectl apply -f -\n",
     "\n",
+    "# Create NATS values file with JetStream configuration\n",
+    "cat > /tmp/nats-values.yaml <<EOF\n",
+    "nats:\n",
+    "  jetstream:\n",
+    "    enabled: true\n",
+    "    fileStore:\n",
+    "      enabled: true\n",
+    "      dir: /data\n",
+    "      pvc:\n",
+    "        enabled: true\n",
+    "        size: 10Gi\n",
+    "\n",
+    "config:\n",
+    "  merge:\n",
+    "    jetstream:\n",
+    "      max_file_store: 10737418240  # 10GB in bytes\n",
+    "      store_dir: /data\n",
+    "EOF\n",
+    "\n",
     "# Install NATS with JetStream enabled\n",
     "echo \"Installing NATS with JetStream...\"\n",
     "helm upgrade --install nats nats/nats \\\n",
     "  --namespace nats-system \\\n",
-    "  --set nats.jetstream.enabled=true \\\n",
-    "  --set nats.jetstream.memStorage.enabled=true \\\n",
-    "  --set nats.jetstream.memStorage.size=1Gi \\\n",
-    "  --set nats.jetstream.fileStorage.enabled=true \\\n",
-    "  --set nats.jetstream.fileStorage.size=2Gi \\\n",
+    "  --values /tmp/nats-values.yaml \\\n",
     "  --wait\n",
     "\n",
     "echo \"✓ NATS installed successfully\"\n",
     "echo \"  Connection: nats://nats.nats-system:4222\"\n",
-    "echo \"  JetStream: Enabled (1Gi memory + 2Gi disk)\""
+    "echo \"  JetStream: Enabled with 10Gi file storage\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfa873aa",
+   "id": "c2691f47",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -195,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776fa1e7",
+   "id": "dd7e6c4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c5171b",
+   "id": "d0035cb8",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -225,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "239a991b",
+   "id": "1a22a3a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09626093",
+   "id": "79309978",
    "metadata": {},
    "source": [
     "---\n",
@@ -253,7 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be7be116",
+   "id": "81940030",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4015dc53",
+   "id": "620a803b",
    "metadata": {},
    "source": [
     "---\n",
@@ -290,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0732a945",
+   "id": "f6ecfd6b",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -299,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c7f3619",
+   "id": "1927ae93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caa64f53",
+   "id": "dc37eccd",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -338,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b8ec13",
+   "id": "88878f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d1392c",
+   "id": "23689919",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -379,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0899e008",
+   "id": "48c2fe57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c26e1c",
+   "id": "96a26f6b",
    "metadata": {},
    "source": [
     "---\n",
@@ -409,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26f1767b",
+   "id": "683fcc84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ec49992",
+   "id": "b9eb2023",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -516,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c272855",
+   "id": "a9da36d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "848fff8b",
+   "id": "399f7938",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -560,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06693ea3",
+   "id": "e13ac329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +605,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "345297c7",
+   "id": "3ad5a1dc",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -599,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0f4410",
+   "id": "67680f56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1910e24c",
+   "id": "e396ff83",
    "metadata": {},
    "source": [
     "---\n",
@@ -639,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d0f2a4",
+   "id": "5ab3995e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb87a9d6",
+   "id": "b687ea95",
    "metadata": {},
    "source": [
     "**Expected Behavior:**\n",
@@ -707,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8dd69fa",
+   "id": "0ab3e0e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1a57da5",
+   "id": "7a42f8f0",
    "metadata": {},
    "source": [
     "**What to look for:**\n",
@@ -741,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7b1fc49",
+   "id": "768c659f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +803,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a929ab",
+   "id": "bf5a2b55",
    "metadata": {},
    "source": [
     "### Step 4: Check Worker Logs for Cache Activity"
@@ -797,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d766981c",
+   "id": "354c3140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5896af2",
+   "id": "82c15ddc",
    "metadata": {},
    "source": [
     "**What to observe:**\n",
@@ -866,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a386c2a6",
+   "id": "c76356aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51b0e70f",
+   "id": "4026bba0",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -898,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10e7f082",
+   "id": "4a6f467f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +937,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d0f1ad5",
+   "id": "75710f8e",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -931,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86d1bf65",
+   "id": "5e3f3087",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +970,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41ad3dbe",
+   "id": "7ce8a115",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -989,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec51b716",
+   "id": "cdb8dc5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1021,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fa5170",
+   "id": "cd2b9942",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1017,7 +1032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41b1101",
+   "id": "05fed647",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1042,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a23bf7e1",
+   "id": "ff787e6d",
    "metadata": {},
    "source": [
     "---\n",
@@ -1059,7 +1074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c0d232",
+   "id": "d44ca7e9",
    "metadata": {},
    "source": [
     "### Community Resources\n",
